3-Commit Diseño del formulario de grupo empresarial e implementación de las opciones de menú para los formularios de unidad local y establecimiento

--- a/GrupoEmpresarial-war/web/login.xhtml
+++ b/GrupoEmpresarial-war/web/login.xhtml
@@ -22,11 +22,11 @@
              <p:growl id="growl" sticky="true" showDetail="true" life="3000" />
 
             <h:panelGrid id="pnlLogin" columns="2" cellpadding="5">
-                <h:outputLabel for="username" value="Username:" />
+                <h:outputLabel for="username" value="Usuario:" />
                 <p:inputText id="username" value="#{MbLogin.username}" 
                                     required="true" label="username" requiredMessage="Usuario requerido"/>
 
-                <h:outputLabel for="password" value="Password:" />
+                <h:outputLabel for="password" value="Contraseña:" />
                 <p:password id="password" value="#{MbLogin.password}" 
                                     required="true" label="password" requiredMessage="Contraseña requerida" />
                 
