--- a/GrupoEmpresarial-war/web/plantilla/menu.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/menu.xhtml
@@ -22,8 +22,8 @@
                 </p:submenu>
             </p:menu-->
                 
-            <p:menu model="#{MbLogin.modeloMenu}" toggleable="true" />
-            </h:form>                
+            <p:menu model="#{MbLogin.modeloMenu}" toggleable="true" style="width: 99%;"/>
+            </h:form>
         </ui:composition>
     </h:body>
 </html>
