--- a/GrupoEmpresarial-war/web/plantilla/encabezado.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/encabezado.xhtml
@@ -1,17 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:p="http://primefaces.org/ui"
-    xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
     <h:body>   
         <ui:composition>   
-        <center>
-            <!--h:outputText value="#{nerv['header.title']}" /--> 
-            <div>
-                <!--p:commandButton value="Login" icon="ui-icon-extlink" actionListener="#{dfView.visualizarVentanaParametrizada('/interfaz/usuario/ventana/vta-acceso-sistema',true,true,false,130,320)}"/-->
-                <p:outputLabel value="Bienvenido, #{MbLogin.usuarioLogueado.nombres}"/>
-            </div>
-        </center>          
+            <p:graphicImage value="/resources/imagen/dane.png" />
+            <center>
+                <!--h:outputText value="#{nerv['header.title']}" /--> 
+                <div>
+                    <!--p:commandButton value="Login" icon="ui-icon-extlink" actionListener="#{dfView.visualizarVentanaParametrizada('/interfaz/usuario/ventana/vta-acceso-sistema',true,true,false,130,320)}"/-->
+                    <p:outputLabel value="Bienvenido, #{MbLogin.usuarioLogueado.nombres}"/>
+                </div>
+            </center>          
         </ui:composition>
     </h:body>
 </html>
