--- a/GrupoEmpresarial-war/web/plantilla/pie-pagina.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/pie-pagina.xhtml
@@ -7,8 +7,8 @@
     <h:body>   
         <ui:composition>   
             <center>
-                <p:panel style="border: none; padding:0px;">
-                    <h:panelGrid columns="1" style="border: none; padding:0px;">
+                <p:panel style="border: none; padding:0px; background: #B6014C !important;">
+                    <h:panelGrid columns="1" style="border: none; padding:0px; color: white">
                         <h:outputText value="#{aplicacionPrincipal.sistemaInfo.sistema} V.(#{aplicacionPrincipal.sistemaInfo.version})" style="text-align: center; width: 100%; display: block;"/>
                         <h:outputText value="#{nerv['footer.copyright']}" style="text-align: center; width: 100%; display: block;"/>
                     </h:panelGrid>
