--- a/GrupoEmpresarial-war/web/login.xhtml
+++ b/GrupoEmpresarial-war/web/login.xhtml
@@ -31,7 +31,7 @@
                                     required="true" label="password" requiredMessage="Contraseña requerida" />
                 
                 <p:spacer width="10"/>
-                <p:commandButton value="Login" update="growl" actionListener="#{MbLogin.login}" oncomplete="manejarLogin(xhr, status, args)"/>                
+                <p:commandButton value="Ingresar" update="growl" actionListener="#{MbLogin.login}" oncomplete="manejarLogin(xhr, status, args)"/>                
             </h:panelGrid>
             <p:spotlight target="pnlLogin" widgetVar="spot"/>
         </h:form>
