--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-identificacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-identificacion.xhtml
@@ -7,48 +7,83 @@
 
     <p:panel header="Información de identificación">
         <p:messages />
-        <h:panelGrid columns="2" columnClasses="label, value">
-            <h:outputText value="ID_GRUPO: " />
-            <p:inputText />
+        <h:panelGrid columns="2" columnClasses="label, value" >
 
-            <h:outputText value="Nombre comercial: " />
-            <p:inputText />
+            <h:outputText value="ID_GRUPO: " styleClass="etiquetaFormulario"/>
+            <h:outputText value="2038" />
 
-            <h:outputText value="Nombre registrado: " />
-            <p:inputText />
+            <h:outputText value="Nombre comercial: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="NIT: " />
-            <p:inputText />
+            <h:outputText value="Nombre registrado: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Página WEB: " />
-            <p:inputText />
+            <h:outputText value="NIT: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Representante Legal: " />
-            <p:inputText />
+            <h:outputText value="Página web: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Nombre de contacto: " />
-            <p:inputText />
+            <h:outputText value="Representante legal: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Cargo: " />
-            <p:inputText />
+            <h:outputText value="Nombre contacto 1: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Teléfono de contacto: " />
-            <p:inputText />
+            <h:outputText value="Cargo contacto 1: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Correo electrónico de contacto: " />
-            <p:inputText />
+            <h:outputText value="Teléfono contacto 1: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Ciudad sede principal: " />
-            <p:inputText />
+            <h:outputText value="Correo electrónico contacto 1: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Departamento sede principal: " />
-            <p:inputText />
+            <h:outputText value="Nombre contacto 2: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Dirección sede principal: " />
-            <p:inputText />
+            <h:outputText value="Cargo contacto 2: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
-            <h:outputText value="Teléfono sede principal: " />
-            <p:inputText />
+            <h:outputText value="Teléfono contacto 2: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
+
+            <h:outputText value="Correo electrónico contacto 2: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
+
+            <h:outputText value="Nombre contacto 3: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
+
+            <h:outputText value="Cargo contacto 3: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
+
+            <h:outputText value="Teléfono contacto 3: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
+
+            <h:outputText value="Correo electrónico contacto 3: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
+
+            <h:outputText value="Departamento sede principal: " styleClass="etiquetaFormulario"/>
+            <p:selectOneMenu style="width:330px">
+                <f:selectItem itemLabel="Departamento..." itemValue="" />
+                <f:selectItem itemLabel="Bogotá" itemValue="Bogotá" />
+                <f:selectItem itemLabel="Huila" itemValue="Huila" />
+                <f:selectItem itemLabel="Tolima" itemValue="Tolima" />
+            </p:selectOneMenu>
+
+            <h:outputText value="Ciudad sede principal: " styleClass="etiquetaFormulario"/>
+            <p:selectOneMenu style="width:330px">
+                <f:selectItem itemLabel="Ciudad..." itemValue="" />
+                <f:selectItem itemLabel="Aipe" itemValue="Aipe" />
+                <f:selectItem itemLabel="Algeciras" itemValue="Algeciras" />
+                <f:selectItem itemLabel="Baraya" itemValue="Baraya" />
+            </p:selectOneMenu>
+
+            <h:outputText value="Dirección sede principal: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
+
+            <h:outputText value="Teléfono sede principal: " styleClass="etiquetaFormulario"/>
+            <p:inputText styleClass="valorEtiquetaFormulario"/>
 
             <!--h:outputText value="Saltar siguiente: " />
             <h:selectBooleanCheckbox value="#{practica.skip}" /-->
