Se modificó: Loggin en interfaz

--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-relacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-relacion.xhtml
@@ -4,13 +4,14 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
- 
-        <p:panel header="Información tamaño">
-            <p:messages />
-            <h:panelGrid columns="2" columnClasses="label, value">
-                <h:outputText value="variable: " />
-                <p:inputText />
-            </h:panelGrid>
-        </p:panel>
+
+    <p:panel header="Información de relación">
+        <p:messages />
+        <h:panelGrid columns="2" columnClasses="label, value">
+
+            <!--h:outputText value="Saltar siguiente: " />
+            <h:selectBooleanCheckbox value="#{practica.skip}" /-->
+        </h:panelGrid>
+    </p:panel>
 
 </ui:composition>
