--- a/GrupoEmpresarial-war/web/plantilla/menu.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/menu.xhtml
@@ -22,7 +22,7 @@
                 </p:submenu>
             </p:menu-->
                 
-            <p:menu model="#{MbLogin.modeloMenu}" toggleable="true" style="width: 99%;"/>
+            <p:menu model="#{MbLogin.modeloMenu}" toggleable="true" style="width: 99%; border: none;"/>
             </h:form>
         </ui:composition>
     </h:body>
