--- a/GrupoEmpresarial-war/web/login.xhtml
+++ b/GrupoEmpresarial-war/web/login.xhtml
@@ -33,19 +33,20 @@
 
                 <h:form >
                     <p:growl id="growl" sticky="true" showDetail="true" life="3000" />
-                    <div align="center" style="vertical-align: middle" > 
-                        <h:panelGrid id="pnlLogin" columns="2" cellpadding="5" ">
-                            <h:outputLabel for="username" value="Usuario:" />
+                    <div align="center" style="height: 100px; margin: 0 auto; padding: 10% 0; position: relative;" > 
+                        <h:panelGrid id="pnlLogin" columns="2" cellpadding="5" >
+                            <h:outputLabel for="username" value="Usuario:" styleClass="etiquetaFormulario"/>
                             <p:inputText id="username" value="#{MbLogin.username}" 
                                          required="true" label="username" requiredMessage="Usuario requerido"/>
 
-                            <h:outputLabel for="password" value="Contraseña:" />
+                            <h:outputLabel for="password" value="Contraseña:" styleClass="etiquetaFormulario"/>
                             <p:password id="password" value="#{MbLogin.password}" 
                                         required="true" label="password" requiredMessage="Contraseña requerida" />
-
                             <p:spacer width="10"/>
-                            <p:commandButton value="Ingresar" update="growl" actionListener="#{MbLogin.login}" oncomplete="manejarLogin(xhr, status, args)"/>                
+                            <p:commandButton value="Ingresar" update="growl" actionListener="#{MbLogin.login}" 
+                                             oncomplete="manejarLogin(xhr, status, args)"/>
                         </h:panelGrid>
+                            <p:separator style="width: 260px;"/>
                     </div>
                     <p:spotlight target="pnlLogin" widgetVar="spot" />
                 </h:form>
@@ -61,7 +62,7 @@
                 </script>
             </p:layoutUnit>
 
-            <p:layoutUnit position="south" size="50" closable="true" collapsible="true" styleClass="cajaPiePagina">
+            <p:layoutUnit position="south" closable="true" collapsible="true" styleClass="cajaPiePagina">
                 <ui:include src="/plantilla/pie-pagina.xhtml" />
             </p:layoutUnit>
 
