--- a/GrupoEmpresarial-war/web/plantilla/pie-pagina.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/pie-pagina.xhtml
@@ -1,18 +1,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets">
-    <h:body>   
-        <ui:composition>   
-            <center>
-                <p:panel style="border: none; padding:0px; background: #B6014C !important;">
-                    <h:panelGrid columns="1" style="border: none; padding:0px; color: white">
-                        <h:outputText value="#{aplicacionPrincipal.sistemaInfo.sistema} V.(#{aplicacionPrincipal.sistemaInfo.version})" style="text-align: center; width: 100%; display: block;"/>
-                        <h:outputText value="#{nerv['footer.copyright']}" style="text-align: center; width: 100%; display: block;"/>
-                    </h:panelGrid>
-                </p:panel>
+    <h:body>
+        <ui:composition>
+            <center style="background: #B6014C !important; color: #ffffff">
+                <div class="ui-grid ui-grid-responsive">
+                    <div class="ui-grid-row">
+                        <div class="ui-grid-col-12">
+                        <h:outputText value="#{aplicacionPrincipal.sistemaInfo.sistema} V.(#{aplicacionPrincipal.sistemaInfo.version})"/>
+                    </div>
+                </div>
+                <div class="ui-grid-row">
+                    <div class="ui-grid-col-12">
+                        <h:outputText value="#{nerv['footer.copyright']}" />
+                    </div>
+                </div>
+                </div>
             </center>
         </ui:composition>
     </h:body>
