--- a/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
@@ -30,7 +30,7 @@
                     <ui:insert name="content" />
                 </p:layoutUnit>
 
-                <p:layoutUnit position="south" size="50" closable="true" collapsible="true" styleClass="cajaPiePagina">
+                <p:layoutUnit position="south" closable="true" collapsible="true" styleClass="cajaPiePagina">
                     <ui:include src="pie-pagina.xhtml" />
                 </p:layoutUnit>
 
