--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-relacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-relacion.xhtml
@@ -10,34 +10,33 @@
         <h:panelGrid columns="2" columnClasses="label, value">
             <h:outputText value="Tipo de grupo: " styleClass="etiquetaFormulario"/>
             <p:selectOneMenu style="width:330px">
-                <f:selectItem itemLabel="Grupo..." itemValue="" />
-                <f:selectItem itemLabel="Grupo a" itemValue="Grupo a" />
-                <f:selectItem itemLabel="Grupo b" itemValue="Grupo a" />
-                <f:selectItem itemLabel="Grupo c" itemValue="Grupo a" />
+                <f:selectItem itemLabel="Tipo de grupo..." itemValue="" />
+                <f:selectItem itemLabel="Grupo" itemValue="Grupo" />
+                <f:selectItem itemLabel="Situación de control" itemValue="Situación de control" />
+                <f:selectItem itemLabel="Grupo y situación de control" itemValue="Grupo y situación de control" />
             </p:selectOneMenu>
 
             <h:outputText value="Situación de control: " styleClass="etiquetaFormulario"/>
             <p:selectOneMenu style="width:330px">
                 <f:selectItem itemLabel="Situación..." itemValue="" />
-                <f:selectItem itemLabel="Situación a" itemValue="Situación a" />
-                <f:selectItem itemLabel="Situación b" itemValue="Situación a" />
-                <f:selectItem itemLabel="Situación c" itemValue="Situación a" />
+                <f:selectItem itemLabel="Controlante" itemValue="Controlante" />
+                <f:selectItem itemLabel="Controlada" itemValue="Controlada" />
+                <f:selectItem itemLabel="Ninguna" itemValue="Ninguna" />
             </p:selectOneMenu>
 
             <h:outputText value="Tipo de control: " styleClass="etiquetaFormulario"/>
             <p:selectOneMenu style="width:330px">
                 <f:selectItem itemLabel="Control..." itemValue="" />
-                <f:selectItem itemLabel="Control a" itemValue="Control a" />
-                <f:selectItem itemLabel="Control b" itemValue="Control a" />
-                <f:selectItem itemLabel="Control c" itemValue="Control a" />
+                <f:selectItem itemLabel="Nacional" itemValue="Nacional" />
+                <f:selectItem itemLabel="Extranjera" itemValue="Extranjera" />
             </p:selectOneMenu>
 
             <h:outputText value="Tipo de empresa (controlante): " styleClass="etiquetaFormulario"/>
             <p:selectOneMenu style="width:330px">
                 <f:selectItem itemLabel="Empresa..." itemValue="" />
-                <f:selectItem itemLabel="Empresa a" itemValue="Empresa a" />
-                <f:selectItem itemLabel="Empresa b" itemValue="Empresa a" />
-                <f:selectItem itemLabel="Empresa c" itemValue="Empresa a" />
+                <f:selectItem itemLabel="Privada" itemValue="Privada" />
+                <f:selectItem itemLabel="Publica" itemValue="Publica" />
+                <f:selectItem itemLabel="Mixta" itemValue="Mixta" />
             </p:selectOneMenu>
 
             <h:outputText value="NIT de la controlante: " styleClass="etiquetaFormulario"/>
