--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-relacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-relacion.xhtml
@@ -10,14 +10,17 @@
         <h:panelGrid columns="2" columnClasses="label, value">
 
             <h:outputText value="Situación de control: " styleClass="etiquetaFormulario"/>
-            <p:inputText styleClass="valorEtiquetaFormulario"/>
+            <p:selectOneMenu style="width:330px">
+                <f:selectItem itemLabel="Situación..." itemValue="" />
+                <f:selectItem itemLabel="Matriz" itemValue="Matriz" />
+                <f:selectItem itemLabel="Subordinada" itemValue="Subordinada" />
+            </p:selectOneMenu>
 
             <h:outputText value="Tipo de relación: " styleClass="etiquetaFormulario"/>
             <p:selectOneMenu style="width:330px">
                 <f:selectItem itemLabel="Relación..." itemValue="" />
-                <f:selectItem itemLabel="Relación a" itemValue="Grupo a" />
-                <f:selectItem itemLabel="Relación b" itemValue="Grupo a" />
-                <f:selectItem itemLabel="Relación c" itemValue="Grupo a" />
+                <f:selectItem itemLabel="Filial" itemValue="Filial" />
+                <f:selectItem itemLabel="Subsidiaria" itemValue="Subsidiaria" />
             </p:selectOneMenu>
 
             <h:outputText value="NIT de la controlante: " styleClass="etiquetaFormulario"/>
