--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
@@ -6,8 +6,14 @@
     <h:body>
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
-                <h3>REPORTE DE PERFILAMIENTO DEL GRUPO EMPRESARIAL</h3>
-                <iframe src="../../resources/pdf/file.pdf" width="99%" height="90%" scrolling="no"></iframe>
+                <h3 style="text-align: center;">REPORTE DE PERFILAMIENTO DEL GRUPO EMPRESARIAL</h3>
+                <h:form style="height: 88%;" >
+                    <p:commandButton value="Generar reporte" update="@all"
+                                     actionListener="#{MbReporteGrupoEmpresa.generarReportePdf(nerv['reporte.grupoEmpresarial.path'], nerv['reporte.grupoEmpresarial.archivo'])}"/>
+                    <p:outputPanel deferred="true" style="width: 100%; height: 100%;">
+                        <p:media value="#{MbReporteGrupoEmpresa.contenido}" width="100%" height="100%" player="pdf"/>
+                    </p:outputPanel>
+                </h:form>
             </ui:define>
         </ui:composition>
     </h:body>
